--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <h1>This is a console app for generating times tables.</h1>
+    <h1>This is a console app for generating times tables. Press "Option + ⌘ + J"on Mac and "Shift + CTRL + J" on Windows/Linux to open the console.</h1>
 
 
     <script src="script.js"></script>
